k8s-resources/aws-eks-production-cluster/02-service-database.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
  namespace: main-project
spec:
  type: ExternalName
  externalName: libera-postgresql.cp3bickqbfzo.us-east-1.rds.amazonaws.com
