k8s-resources/aws-eks-production-cluster/07-deploymentAndService-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-project
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs
  template:
    metadata:
      labels:
        app: nestjs
    spec:
      # serviceAccountName: s3-access  # Not used for the DEMO
      containers:
        - name: nestjs
          image: jfer11/thesis-backend:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ["sleep 5; npm ci --ignore-script=prepare && prisma generate && prisma migrate deploy && npm start"]
          # args: ["sleep 5; npm install && prisma generate && prisma migrate dev --name init && npm run start:dev"]  # TODO: This was the old command
---
apiVersion: v1
kind: Service
metadata:
  namespace: main-project
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5000
  selector:
    app: nestjs
