k8s-resources/aws-eks-production-cluster/08-deploymentAndService-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-project
  name: frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: jfer11/thesis-frontend:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          command: ["npm", "run", "start"]
---
apiVersion: v1
kind: Service
metadata:
  namespace: main-project
  name: frontend-service
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3000
  selector:
    app: nextjs
